This file lists all changes made to the game driver in all glory detail.
See the file HISTORY for a user-oriented summary of all the changes.

17-Jan-2009 (Zesstra)
  - (efuns.c)
    Relaxed syntax check in v_trim() to allow a 0 as <ch> for trimming 
      "\0" (#473)

17-Jan-2009 (Fuchur)
  - (efuns.c, func_spec, mudlib/sys/debug_info.h, doc/efun/debug_info,
    doc/efun.de/debug_info.de)
    use debug_info instead of new get_eval_number() efun.
  - (efuns.c, func_spec, interpret.c, interpret.h, doc/efuns/get_eval_number,
    doc/efuns.de/get_eval_number.de)
    add get_eval_number efun.
  - (backend.c, comm.c, interpret.c, object.c)
    call mark_(start|end)_evaluation() in various places (#476)
  - (prolang.y)
    check return value of verify_declared() - fixes a crash in t-language

17-Jan-2009 (Gnomi)
  - (object.c)
    Save_object without a filename removed one too many elements
    from the stack. (Bug #595)
  
16-Jan-2009 (Zesstra)
  - (config.h.in, lex.c)
    Enforce the possible value range for ITABLE_SIZE (256 - SHRT_MAX/32768).
      Fixes issues of not finding identifiers in the table if the table is to
      large. (#558)
    Updated documentation in config.h.in to reflect this.
    Corrected the manpages for read_file(). (#592)

14-Jan-2009 (Gnomi)
  - (comm.c, pkg-mccp.c, configure)
    Use of write buffers without the need for threads.
  - (object.c)
    Made restore_value reentrant. (Bug #548)
  - (prolang.y)
    Removed useless code.
  
14-Jan-2009 (Zesstra)
  - (doc/driver/limitations)
    Started to assemble a list of non-configurable limits - to be extended...
  - (exec.h, object.c, closure.c, interpret.c)
    Changed some code defines from exec.h to static functions and
      constants to an enum.
    Introducing a properly typed CROSSDEF_NAME_OFFSET() solves crash on LP64
      platforms in functionlist(). (#559)
    Renamed SEARCH_FUNCTION_INHERIT to search_function_inherit and return the
      pointer to the inherit structure.